added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problem is Problem</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi repellendus quis facere natus voluptatum, pariatur dolorum consequatur possimus enim magnam. Neque vitae culpa amet iste adipisci error rem earum perferendis?</h3>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere, iste fugit cum illum accusantium quam pariatur delectus ex alias at expedita eveniet nesciunt repellendus iusto? Deleniti adipisci consequatur ea!</p>
+    </div>
 </body>
 </html>
